[workspace]
resolver = "2"
members = [
  "forge-core",
  "forge-variation",
  "forge-ai",
  "forge-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
authors = ["Tristan <tristangooding115@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
